<resources>
    <string name="app_name">Dummy App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_basket">Basket</string>
    <string name="active_order">Active order</string>
    <string name="order_number">Order Number - 5th Avenue - AI Furjan Area</string>
    <string name="txt_menu">Food</string>
    <string name="txt_food_category">Food</string>
    <string name="item_food_details_txt">Ultimate Chicken - Wraps, Pl</string>
    <string name="offers">Get $0 delivery fee on your first order over $10!</string>
    <string name="item_food_details_likes_txt">500+</string>
    <string name="item_food_details_distance_txt">2.5 KM Away</string>
    <string name="item_food_details_time_txt">25–45 Mins</string>
    <string name="item_food_details_iqd_txt">IQD 1000</string>
    <string name="item_food_details_rating_txt">3.4 Excellent</string>
    <string name="txt_offers_on_selected_item">Get 20% off selected items</string>
    <string name="txt_low_delivery_fee">Low delivery fee</string>
    <string name="txt_hrz_home_order">Order Again</string>
    <string name="txt_hrz_see_more">See More</string>
    <string name="txt_error_msg">Oops!! Something went wrong</string>
    <string name="txt_retry">Try again</string>
    <string name="txt_loading_msg">Try searching with food emojis today</string>
    <string name="txt_no_network_msg">Could not connect to the internet. Please check your network</string>
    <string name="txt_gold_category_card">Your Gold Category Card</string>
    <string name="txt_gold_category_details">You\'ve placed three orders with us. Order more to obtain our Gold Category Card</string>


    <string name="home_chip_text_mins">Mins</string>
    <string name="home_chip_text_away">KM Away</string>
</resources>