<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/card_bg"
    app:cardCornerRadius="@dimen/dimen_15dp"
    android:layout_marginTop="@dimen/dimen_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_offers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_offers_on_selected_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/app_color"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_12dp"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:textSize="@dimen/dimen_12dp"
                    android:text="@string/txt_offers_on_selected_item"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_low_delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_5dp"
            app:layout_constraintTop_toBottomOf="@id/cv_offers"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_low_delivery_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_low_delivery_fee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:paddingStart="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_12dp"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:textSize="@dimen/dimen_12dp"
                    android:text="@string/txt_low_delivery_fee"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/item_food_details_img"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:scaleType="fitXY"
            android:src="@drawable/food_items_rectangle_img"/>

        <TextView
            android:id="@+id/item_food_details_txt"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:text="@string/item_food_details_txt"
            android:textSize="@dimen/dimen_20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="left"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_food_details_img"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:chipSpacingVertical="@dimen/dimen_0sp"
            app:layout_constraintTop_toBottomOf="@id/item_food_details_txt">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_1_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIconTint="@color/black"
                android:textSize="@dimen/dimen_10sp"
                android:fontFamily="@font/cairo_regular"
                app:chipIcon="@drawable/ic_heart"
                app:chipIconSize="@dimen/dimen_10dp"
                app:chipStrokeColor="@color/chip_bg"
                android:text="@string/item_food_details_likes_txt"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_2_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_10sp"
                android:backgroundTint="@color/chip_bg"
                android:fontFamily="@font/cairo_regular"
                app:chipIconSize="@dimen/dimen_15sp"
                app:chipStrokeColor="@color/chip_bg"
                android:text="@string/item_food_details_distance_txt"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_3_time"
                app:chipBackgroundColor="@color/chip_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_10sp"
                android:fontFamily="@font/cairo_regular"
                app:chipIcon="@drawable/ic_location"
                app:chipIconSize="@dimen/dimen_10sp"
                app:chipStrokeColor="@color/chip_bg"
                android:text="@string/item_food_details_time_txt"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_4_iqd"
                app:chipBackgroundColor="@color/chip_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_10sp"
                android:fontFamily="@font/cairo_regular"
                app:chipIcon="@drawable/ic_scooter_svg"
                app:chipIconSize="@dimen/dimen_10sp"
                app:chipStrokeColor="@color/chip_bg"
                android:text="@string/item_food_details_iqd_txt"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_5_ratings"
                app:chipBackgroundColor="@color/chip_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_10sp"
                android:fontFamily="@font/cairo_regular"
                app:chipIcon="@drawable/ic_star"
                app:chipIconSize="@dimen/dimen_10sp"
                app:chipStrokeColor="@color/chip_bg"
                android:text="@string/item_food_details_rating_txt"/>

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>